--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Kanzhi Cheng"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/IMG_my.png"
   bio              : "Ph.D. Student in NLP, Nanjing Univeristy"
   location         : "Nanjing, China"
   employer         :
