--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,4 +19,4 @@ main:
     url: "/#-internships"
 
   - title: "Personal Interests"
-    url: "/#personal-interests"
+    url: "/#-personal-interests"
